--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,5 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/ashokyadav006/hexo-blog.git
