--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone: Asia/Kolkata
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: /
-root: /
+url: https://ashokyadav006.github.io
+root: hexo-blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
